--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,24 @@
 {
     "name": "emanuele/php_api",
-    "description": "test",
+    "description": "Production-ready PHP API with Slim Framework",
     "type": "project",
     "require": {
-        "emant/brownie-php": "dev-main",
-        "firebase/php-jwt": "^6.10"
+        "php": ">=8.1",
+        "slim/slim": "^4.12",
+        "slim/psr7": "^1.6",
+        "php-di/php-di": "^7.0",
+        "monolog/monolog": "^3.5",
+        "firebase/php-jwt": "^6.10",
+        "vlucas/phpdotenv": "^5.6",
+        "psr/http-message": "^2.0",
+        "psr/http-server-handler": "^1.0",
+        "psr/http-server-middleware": "^1.0"
+    },
+    "require-dev": {
+        "zircote/swagger-php": "^4.8"
+    },
+    "scripts": {
+        "docs": "php scripts/generate-docs.php"
     },
     "license": "MIT",
     "autoload": {
